2007-07-23  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: Implementing DND in the selected
	layouts list. http://bugzilla.gnome.org/show_bug.cgi?id=351936

2007-07-11  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-xkbpv.c,
	gnome-keyboard-properties.glade, gnome-keyboard-properties-xkbltadd.c:
	improving the layout and sorting, thanks to Christian,
	http://bugzilla.gnome.org/show_bug.cgi?id=455353
	* gnome-keyboard-properties.glade: s/group/layout/ - because
	xkeyboard-config is going to have all UI strings as "layout".
	* gnome-keyboard-properties-xkblt.c: redraw the selected layouts
	window when "Separate layout per window" is toggled - otherwise
	"Default" radios are not repainted

2007-05-19  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbmc.c: make things buildable with
	libxklavier 3.2
	* gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkbltadd.c: XklConfigItem is a GObject, so
	it has to be properly built (not on the stack but in heap)

2007-05-17  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbmc.c, gnome-keyboard-properties.glade:
	adding vendor list to the box (option, if there are vendors in
	base.xml)

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.c: (create_dialog):
	* gnome-keyboard-properties.glade: set button images via code instead
	of relying on glade, so they respect the gtk-button-images xsetting

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* keyboard.desktop.in.in: renamed Bugzilla product.

2007-03-27  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-xkbpv.c,
	gnome-keyboard-properties.glade, gnome-keyboard-properties-xkbltadd.c:
	new version of the layout chooser, comboboxentry-based. Fully
	functional (I hope).

2007-03-21  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, Makefile.am,