@@ -1,3 +1,8 @@
+2007-07-24  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkblt.c, gnome-keyboard-properties.glade:
+	eliminating up/down buttons in the layout list, making it look nicer.
+
 2007-07-23  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkblt.c: Implementing DND in the selected
